# asset360-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build_py.sh  build_py3.13.sh  build_wasm.sh  package-lock.json  pyproject.toml
.github/workflows/: CI.yml
docs/design/: blame.md  typeinfo-for-bindings.md
docs/design/wasm/: index.md
pkg/: index.d.ts  index.js  package.json
python/asset360_rust/: __init__.py  __init__.pyi  _native2.pyi  _resolver.py  debug_utils.py  schemaview.py
python/tests/: test_blame.py  test_history.py
scripts/: build_wasm.sh  test-python.sh  test_wasm_ts.sh
src/: backward_solver.rs  blame.rs  constraint_set.rs  foreign_references.rs  forward_eval.rs  lib.rs  predicate.rs  scope_predicate.rs  shacl_ast.rs  shacl_parser.rs  sparql_executor.rs  sparql_scoper.rs
src/blame/tests/: asset360.rs  basic.rs  common.rs  history.rs  mod.rs  multi_stage.rs  path_map.rs
src/wasm/: minijinja.rs  mod.rs
tests/data/: asset360.yaml  asset360_stages.json  eulynx.yaml  recomputed_stages.json  rsm.yaml  stages.json  types.yaml
tests/data/blame_series/: project_v0.yaml  project_v1.yaml  project_v2.yaml  project_v3.yaml  schema.yaml
tests/wasm/ts/: package-lock.json  package.json  tsconfig.json
tests/wasm/ts/src/: api-contract.test.ts  linkmlinstance.test.ts
