[package]
name = "asset360-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "asset360_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.0", optional = true }
pyo3-stub-gen = { version = "0.13.1", optional = true }
linkml_runtime_python = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_runtime_python", optional = true }
linkml_meta = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_meta" }
linkml_schemaview = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "schemaview", default-features = false }
linkml_runtime = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_runtime", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.17"
serde_yml = "0.0.12"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }

[features]
default = ["stubgen"]
# Enable Python extension-module linking only in packaging builds (maturin)
python-extension = ["python-bindings", "pyo3/extension-module"]
python-bindings = [
    "dep:pyo3",
    "dep:linkml_runtime_python",
    "linkml_meta/pyo3"
]
stubgen = [
    "python-bindings",
    "dep:pyo3-stub-gen",
    "linkml_runtime_python/stubgen",
    "linkml_meta/stubgen"
]
wasm-bindings = ["dep:wasm-bindgen"]

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
