[package]
name = "asset360-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "asset360_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.0", optional = true }
pyo3-stub-gen = { version = "0.13.1", optional = true }
# TODO: put rev back to main when https://github.com/Kapernikov/rust-linkml-core/pull/86 is merged
linkml_runtime_python = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_runtime_python", optional = true, rev = "a2b7127007d2aca358870593508eca85a40f69a7" }
linkml_meta = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_meta", rev = "a2b7127007d2aca358870593508eca85a40f69a7" }
linkml_schemaview = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "schemaview", default-features = false, rev = "a2b7127007d2aca358870593508eca85a40f69a7" }
linkml_runtime = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_runtime", default-features = false, rev = "a2b7127007d2aca358870593508eca85a40f69a7" }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.17"
serde_yml = "0.0.12"
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
js-sys = { version = "0.3", optional = true }

[features]
default = ["stubgen"]
# Enable Python extension-module linking only in packaging builds (maturin)
python-extension = ["python-bindings", "pyo3/extension-module"]
python-bindings = [
    "dep:pyo3",
    "dep:linkml_runtime_python",
    "linkml_meta/pyo3"
]
stubgen = [
    "python-bindings",
    "dep:pyo3-stub-gen",
    "linkml_runtime_python/stubgen",
    "linkml_meta/stubgen"
]
wasm-bindings = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
