[package]
name = "asset360-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "asset360_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.0", optional = true }
pyo3-stub-gen = { version = "0.13.1", optional = true }
linkml_runtime_python = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_runtime_python", optional = true }
linkml_meta = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_meta" }
linkml_schemaview = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "schemaview", default-features = false }
linkml_runtime = { git = "https://github.com/Kapernikov/rust-linkml-core", package = "linkml_runtime", default-features = false, features = ["slim"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.17"
serde_yml = "0.0.12"
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
js-sys = { version = "0.3", optional = true }
fragile = { version = "2.0", optional = true }
minijinja = { version = "2.12.0", features = ["loader", "json", "fuel"], optional = true }
minijinja-contrib = { version = "2.12.0", optional = true, features = ["pycompat"] }
console_error_panic_hook = { version = "0.1", optional = true }
oxttl = { version = "0.2", optional = true }
oxrdf = { version = "0.3", optional = true }

[features]
default = ["stubgen"]
# Enable Python extension-module linking only in packaging builds (maturin)
python-extension = ["python-bindings", "pyo3/extension-module"]
python-bindings = [
    "dep:pyo3",
    "dep:linkml_runtime_python",
    "linkml_meta/pyo3"
]
stubgen = [
    "python-bindings",
    "shacl-parser",
    "dep:pyo3-stub-gen",
    "linkml_runtime_python/stubgen",
    "linkml_meta/stubgen"
]
shacl-parser = ["dep:oxttl", "dep:oxrdf"]
wasm-bindings = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]
minijinja-wasm = [
    "wasm-bindings",
    "dep:minijinja",
    "dep:minijinja-contrib",
    "dep:fragile",
    "dep:console_error_panic_hook"
]

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
