[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "asset360-rust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
# Build as a Python extension module (via crate feature)
features = ["python-extension"]
# Expose the module defined in src/lib.rs (dotted to include python package)
module-name = "asset360_rust._native2"
python-source = "python"
